# livekit_encoders_compared

./: .gitignore  LICENCE.md  README.md
client/: .gitignore  Cargo.toml
client/.cargo/: config.toml
client/src/: lib.rs  main.rs
screen_sharer/: Cargo.toml
screen_sharer/src/: lib.rs  main.rs
