[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
livekit = { version = "0.7.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
sysinfo = "0.35.2"