[package]
name = "screen_sharer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
livekit = { git = "https://github.com/gethopp/rust-sdks.git", branch = "patches", features = ["native-tls"] }
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.35.2"
pollster = "0.4.0"
